// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository/process/lookup .lookupUpdates() disables major release separation (major) 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.4.4",
    "updateType": "pin",
  },
  Object {
    "blockedByPin": true,
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() disables major release separation (minor) 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.0.0",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() handles PEP440 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 0,
    "newValue": "==0.9.4",
    "updateType": "pin",
  },
  Object {
    "blockedByPin": true,
    "canBeUnpublished": false,
    "fromVersion": "0.9.4",
    "isRange": true,
    "isSingleVersion": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "==0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "minor",
  },
  Object {
    "blockedByPin": true,
    "canBeUnpublished": false,
    "fromVersion": "0.9.4",
    "isRange": true,
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "==1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() handles digest pin 1`] = `
Object {
  "changelogUrl": undefined,
  "homepage": undefined,
  "releases": Array [
    Object {
      "version": "8.0.0",
    },
    Object {
      "version": "8.1.0",
    },
  ],
  "sourceUrl": "https://github.com/nodejs/node",
  "updates": Array [
    Object {
      "blockedByPin": true,
      "fromVersion": "8.0.0",
      "isSingleVersion": true,
      "newDigest": "sha256:abcdef1234567890",
      "newDigestShort": "abcdef1",
      "newMajor": 8,
      "newMinor": 1,
      "newValue": "8.1.0",
      "toVersion": "8.1.0",
      "updateType": "minor",
    },
    Object {
      "newDigest": "sha256:0123456789abcdef",
      "newDigestShort": "0123456",
      "newValue": "8.0.0",
      "updateType": "pin",
    },
  ],
  "warnings": Array [],
}
`;

exports[`workers/repository/process/lookup .lookupUpdates() handles digest pin for non-version 1`] = `
Object {
  "updates": Array [
    Object {
      "newDigest": "sha256:abcdef1234567890",
      "newDigestShort": "abcdef1",
      "newValue": "alpine",
      "updateType": "pin",
    },
  ],
  "warnings": Array [],
}
`;

exports[`workers/repository/process/lookup .lookupUpdates() handles digest pin for up to date version 1`] = `
Object {
  "changelogUrl": undefined,
  "homepage": undefined,
  "releases": Array [],
  "sourceUrl": "https://github.com/nodejs/node",
  "updates": Array [
    Object {
      "newDigest": "sha256:abcdef1234567890",
      "newDigestShort": "abcdef1",
      "newValue": "8.1.0",
      "updateType": "pin",
    },
  ],
  "warnings": Array [],
}
`;

exports[`workers/repository/process/lookup .lookupUpdates() handles digest update 1`] = `
Object {
  "changelogUrl": undefined,
  "homepage": undefined,
  "releases": Array [
    Object {
      "version": "8.0.0",
    },
    Object {
      "version": "8.1.0",
    },
  ],
  "sourceUrl": "https://github.com/nodejs/node",
  "updates": Array [
    Object {
      "fromVersion": "8.0.0",
      "isSingleVersion": true,
      "newDigest": "sha256:abcdef1234567890",
      "newDigestShort": "abcdef1",
      "newMajor": 8,
      "newMinor": 1,
      "newValue": "8.1.0",
      "toVersion": "8.1.0",
      "updateType": "minor",
    },
    Object {
      "newDigest": "sha256:0123456789abcdef",
      "newDigestShort": "0123456",
      "newValue": "8.0.0",
      "updateType": "digest",
    },
  ],
  "warnings": Array [],
}
`;

exports[`workers/repository/process/lookup .lookupUpdates() handles digest update for non-version 1`] = `
Object {
  "updates": Array [
    Object {
      "newDigest": "sha256:abcdef1234567890",
      "newDigestShort": "abcdef1",
      "newValue": "alpine",
      "updateType": "digest",
    },
  ],
  "warnings": Array [],
}
`;

exports[`workers/repository/process/lookup .lookupUpdates() handles github 404 1`] = `Array []`;

exports[`workers/repository/process/lookup .lookupUpdates() handles packagist 1`] = `Array []`;

exports[`workers/repository/process/lookup .lookupUpdates() handles pypi 404 1`] = `Array []`;

exports[`workers/repository/process/lookup .lookupUpdates() handles unknown purl 1`] = `Array []`;

exports[`workers/repository/process/lookup .lookupUpdates() ignores deprecated 1`] = `
Object {
  "changelogUrl": undefined,
  "deprecationMessage": "On registry \`https://registry.npmjs.org/\`, the \\"latest\\" version (v1.4.1) of dependency \`q2\` has the following deprecation notice:

\`true\`

Marking the latest version of an npm package as deprecated results in the entire package being considered deprecated, so contact the package author you think this is a mistake.",
  "homepage": undefined,
  "releases": Array [
    Object {
      "canBeUnpublished": false,
      "gitRef": "b26cace16f6070e756b6a546cf2693bece03f8f8",
      "releaseTimestamp": "2015-04-26T16:42:11.311Z",
      "version": "1.3.0",
    },
    Object {
      "canBeUnpublished": false,
      "gitRef": "05e20dc704421ca820553721c7178168a8461506",
      "releaseTimestamp": "2015-05-09T16:52:40.699Z",
      "version": "1.4.0",
    },
  ],
  "sourceUrl": "https://github.com/kriskowal/q",
  "updates": Array [
    Object {
      "canBeUnpublished": false,
      "fromVersion": "1.3.0",
      "isSingleVersion": true,
      "newMajor": 1,
      "newMinor": 4,
      "newValue": "1.4.0",
      "releaseTimestamp": "2015-05-09T16:52:40.699Z",
      "toVersion": "1.4.0",
      "updateType": "minor",
    },
  ],
  "warnings": Array [],
}
`;

exports[`workers/repository/process/lookup .lookupUpdates() ignores pinning for ranges when other upgrade exists 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.9.7",
    "updateType": "pin",
  },
  Object {
    "blockedByPin": true,
    "canBeUnpublished": false,
    "fromVersion": "0.9.7",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() pins minor ranged versions 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 1,
    "newValue": "1.4.1",
    "updateType": "pin",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() rejects complex range in-range updates 1`] = `Array []`;

exports[`workers/repository/process/lookup .lookupUpdates() rejects in-range unsupported operator 1`] = `Array []`;

exports[`workers/repository/process/lookup .lookupUpdates() rejects non-fully specified in-range updates 1`] = `Array []`;

exports[`workers/repository/process/lookup .lookupUpdates() rejects reverse ordered less than greater than 1`] = `Array []`;

exports[`workers/repository/process/lookup .lookupUpdates() replaces major complex ranged versions if configured 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "2.7.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "^3.0.0",
    "releaseTimestamp": "2017-10-17T15:22:36.646Z",
    "toVersion": "3.8.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() replaces minor complex ranged versions if configured 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.4.0",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() replaces non-range in-range updates 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.0.0",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() returns additional update if grouping but separateMinorPatch=true 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.0",
    "isSingleVersion": true,
    "newMajor": 0,
    "newMinor": 4,
    "newValue": "0.4.4",
    "releaseTimestamp": "2011-06-10T17:20:04.719Z",
    "toVersion": "0.4.4",
    "updateType": "patch",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.0",
    "isSingleVersion": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.0",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() returns both updates if automerging minor 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.4.4",
    "updateType": "pin",
  },
  Object {
    "blockedByPin": true,
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "isSingleVersion": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "minor",
  },
  Object {
    "blockedByPin": true,
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() returns complex object 1`] = `
Object {
  "changelogUrl": undefined,
  "homepage": undefined,
  "releases": Array [
    Object {
      "canBeUnpublished": false,
      "gitRef": "b26cace16f6070e756b6a546cf2693bece03f8f8",
      "releaseTimestamp": "2015-04-26T16:42:11.311Z",
      "version": "1.3.0",
    },
    Object {
      "canBeUnpublished": false,
      "gitRef": "05e20dc704421ca820553721c7178168a8461506",
      "releaseTimestamp": "2015-05-09T16:52:40.699Z",
      "version": "1.4.0",
    },
    Object {
      "canBeUnpublished": false,
      "gitRef": "d373079d3620152e3d60e82f27265a09ee0e81bd",
      "releaseTimestamp": "2015-05-17T04:25:07.299Z",
      "version": "1.4.1",
    },
  ],
  "sourceUrl": "https://github.com/kriskowal/q",
  "updates": Array [
    Object {
      "canBeUnpublished": false,
      "fromVersion": "1.3.0",
      "isSingleVersion": true,
      "newMajor": 1,
      "newMinor": 4,
      "newValue": "1.4.1",
      "releaseTimestamp": "2015-05-17T04:25:07.299Z",
      "toVersion": "1.4.1",
      "updateType": "minor",
    },
  ],
  "warnings": Array [],
}
`;

exports[`workers/repository/process/lookup .lookupUpdates() returns minor update if automerging both patch and minor 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.0",
    "isSingleVersion": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.0",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() returns minor update if separate patches not configured 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.0",
    "isSingleVersion": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.0",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() returns multiple updates if grouping but separateMajorMinor=true 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.0",
    "isSingleVersion": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.0",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() returns one update if grouping and separateMajorMinor=false 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.0",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() returns only one update if automerging 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.0",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() returns only one update if automerging major 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.4.4",
    "updateType": "pin",
  },
  Object {
    "blockedByPin": true,
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() returns patch minor and major 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.8.0",
    "isSingleVersion": true,
    "newMajor": 0,
    "newMinor": 8,
    "newValue": "0.8.12",
    "releaseTimestamp": "2012-12-29T22:51:00.329Z",
    "toVersion": "0.8.12",
    "updateType": "patch",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.8.0",
    "isSingleVersion": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.8.0",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() returns patch update if automerging patch 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.0",
    "isSingleVersion": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "patch",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.0",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() returns patch update if separateMinorPatch 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.0",
    "isSingleVersion": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "patch",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.0",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() returns rollback for pinned version 1`] = `
Array [
  Object {
    "branchName": "{{{branchPrefix}}}rollback-{{{depNameSanitized}}}-{{{newMajor}}}.x",
    "commitMessageAction": "Roll back",
    "isRollback": true,
    "newMajor": 0,
    "newValue": "0.9.7",
    "semanticCommitType": "fix",
    "updateType": "rollback",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.99",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() returns rollback for ranged version 1`] = `
Array [
  Object {
    "branchName": "{{{branchPrefix}}}rollback-{{{depNameSanitized}}}-{{{newMajor}}}.x",
    "commitMessageAction": "Roll back",
    "isRollback": true,
    "newMajor": 0,
    "newValue": "^0.9.7",
    "semanticCommitType": "fix",
    "updateType": "rollback",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() should allow unstable versions if the current version is unstable 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "3.1.0-dev.20180731",
    "isSingleVersion": true,
    "newMajor": 3,
    "newMinor": 1,
    "newValue": "3.1.0-dev.20180813",
    "releaseTimestamp": "2018-08-13T19:05:14.347Z",
    "toVersion": "3.1.0-dev.20180813",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() should allow unstable versions if the ignoreUnstable=false 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "2.5.16",
    "isSingleVersion": true,
    "newMajor": 2,
    "newMinor": 5,
    "newValue": "2.5.17-beta.0",
    "releaseTimestamp": "2018-03-23T23:29:13.819Z",
    "toVersion": "2.5.17-beta.0",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() should downgrade from missing versions 1`] = `
Object {
  "branchName": "{{{branchPrefix}}}rollback-{{{depNameSanitized}}}-{{{newMajor}}}.x",
  "commitMessageAction": "Roll back",
  "isRollback": true,
  "newMajor": 1,
  "newValue": "1.16.0",
  "semanticCommitType": "fix",
  "updateType": "rollback",
}
`;

exports[`workers/repository/process/lookup .lookupUpdates() should follow dist-tag even if newer version exists 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "3.0.1-insiders.20180713",
    "isSingleVersion": true,
    "newMajor": 3,
    "newMinor": 0,
    "newValue": "3.0.1-insiders.20180726",
    "releaseTimestamp": "2018-07-26T18:20:51.679Z",
    "toVersion": "3.0.1-insiders.20180726",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() should jump unstable versions if followTag 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "3.0.0-insiders.20180706",
    "isSingleVersion": true,
    "newMajor": 3,
    "newMinor": 0,
    "newValue": "3.0.1-insiders.20180726",
    "releaseTimestamp": "2018-07-26T18:20:51.679Z",
    "toVersion": "3.0.1-insiders.20180726",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() should not jump unstable versions 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "3.0.1-insiders.20180726",
    "isSingleVersion": true,
    "newMajor": 3,
    "newMinor": 0,
    "newValue": "3.0.1",
    "releaseTimestamp": "2018-07-30T16:21:13.150Z",
    "toVersion": "3.0.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() should roll back to dist-tag if current version is higher 1`] = `
Array [
  Object {
    "branchName": "{{{branchPrefix}}}rollback-{{{depNameSanitized}}}-{{{newMajor}}}.x",
    "commitMessageAction": "Roll back",
    "isRollback": true,
    "newMajor": 3,
    "newValue": "3.0.1-insiders.20180726",
    "semanticCommitType": "fix",
    "updateType": "rollback",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() should treat zero zero caret ranges as pinned 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.0.34",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 0,
    "newMinor": 0,
    "newValue": "^0.0.35",
    "releaseTimestamp": "2017-04-27T16:59:06.479Z",
    "toVersion": "0.0.35",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() should warn if no version matches dist-tag 1`] = `Array []`;

exports[`workers/repository/process/lookup .lookupUpdates() skips uncompatible versions for 8 1`] = `
Object {
  "changelogUrl": undefined,
  "homepage": undefined,
  "releases": Array [
    Object {
      "version": "8",
    },
    Object {
      "version": "9",
    },
  ],
  "sourceUrl": "https://github.com/nodejs/node",
  "updates": Array [
    Object {
      "fromVersion": "8",
      "isSingleVersion": true,
      "newMajor": 9,
      "newMinor": null,
      "newValue": "9",
      "newVersion": "9",
      "toVersion": "9",
      "updateType": "major",
    },
  ],
  "warnings": Array [],
}
`;

exports[`workers/repository/process/lookup .lookupUpdates() skips uncompatible versions for 8.1 1`] = `
Object {
  "changelogUrl": undefined,
  "homepage": undefined,
  "releases": Array [
    Object {
      "version": "8.1",
    },
    Object {
      "version": "8.2",
    },
    Object {
      "version": "9.0",
    },
  ],
  "sourceUrl": "https://github.com/nodejs/node",
  "updates": Array [
    Object {
      "fromVersion": "8.1",
      "isSingleVersion": true,
      "newMajor": 8,
      "newMinor": 2,
      "newValue": "8.2",
      "newVersion": "8.2",
      "toVersion": "8.2",
      "updateType": "minor",
    },
    Object {
      "fromVersion": "8.1",
      "isSingleVersion": true,
      "newMajor": 9,
      "newMinor": 0,
      "newValue": "9.0",
      "newVersion": "9.0",
      "toVersion": "9.0",
      "updateType": "major",
    },
  ],
  "warnings": Array [],
}
`;

exports[`workers/repository/process/lookup .lookupUpdates() skips uncompatible versions for 8.1.0 1`] = `
Object {
  "changelogUrl": undefined,
  "homepage": undefined,
  "releases": Array [
    Object {
      "version": "8.1.0",
    },
    Object {
      "version": "8.1.5",
    },
    Object {
      "version": "8.2.0",
    },
    Object {
      "version": "8.2.5",
    },
  ],
  "sourceUrl": "https://github.com/nodejs/node",
  "updates": Array [
    Object {
      "fromVersion": "8.1.0",
      "isSingleVersion": true,
      "newMajor": 8,
      "newMinor": 2,
      "newValue": "8.2.5",
      "newVersion": "8.2.5",
      "toVersion": "8.2.5",
      "updateType": "minor",
    },
  ],
  "warnings": Array [],
}
`;

exports[`workers/repository/process/lookup .lookupUpdates() skips undefined values 1`] = `
Object {
  "skipReason": "unsupported-value",
  "updates": Array [],
  "warnings": Array [],
}
`;

exports[`workers/repository/process/lookup .lookupUpdates() skips unsupported values 1`] = `
Object {
  "skipReason": "unsupported-value",
  "updates": Array [],
  "warnings": Array [],
}
`;

exports[`workers/repository/process/lookup .lookupUpdates() supports > latest versions if configured 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.4.1",
    "isSingleVersion": true,
    "newMajor": 2,
    "newMinor": 0,
    "newValue": "2.0.3",
    "releaseTimestamp": "2015-01-31T08:11:47.852Z",
    "toVersion": "2.0.3",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() supports complex major hyphen ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "2.7.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "1.x - 3.x",
    "releaseTimestamp": "2017-10-17T15:22:36.646Z",
    "toVersion": "3.8.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() supports complex major ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "2.7.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "^1.0.0 || ^2.0.0 || ^3.0.0",
    "releaseTimestamp": "2017-10-17T15:22:36.646Z",
    "toVersion": "3.8.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() supports complex ranges 1`] = `
Object {
  "canBeUnpublished": false,
  "fromVersion": "0.8.12",
  "isRange": true,
  "isSingleVersion": false,
  "newMajor": 0,
  "newMinor": 9,
  "newValue": "^0.7.0 || ^0.8.0 || ^0.9.0",
  "releaseTimestamp": "2013-09-04T17:07:22.948Z",
  "toVersion": "0.9.7",
  "updateType": "minor",
}
`;

exports[`workers/repository/process/lookup .lookupUpdates() supports complex tilde ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.2.0 || ~1.3.0 || ~1.4.0",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() supports in-range caret updates 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.0.0",
    "isBump": true,
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "^1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() supports in-range gte updates 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.0.0",
    "isBump": true,
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": ">=1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() supports in-range tilde patch updates 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.0.0",
    "isBump": true,
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 0,
    "newValue": "~1.0.1",
    "releaseTimestamp": "2014-03-11T18:47:17.560Z",
    "toVersion": "1.0.1",
    "updateType": "patch",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.0.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() supports in-range tilde updates 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.0.0",
    "isBump": true,
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 0,
    "newValue": "~1.0.1",
    "releaseTimestamp": "2014-03-11T18:47:17.560Z",
    "toVersion": "1.0.1",
    "updateType": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.0.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() supports lock file updates mixed with regular updates 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "displayFrom": "0.4.0",
    "displayTo": "0.4.4",
    "fromVersion": "0.4.0",
    "isLockfileUpdate": true,
    "isRange": true,
    "isSingleVersion": true,
    "newMajor": 0,
    "newMinor": 4,
    "newValue": "^0.4.0",
    "releaseTimestamp": "2011-06-10T17:20:04.719Z",
    "toVersion": "0.4.4",
    "updateType": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "^0.9.0",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "^1.0.0",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() supports majorgte updates 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.0",
    "isBump": true,
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": ">=1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() supports minor and major upgrades for ranged versions 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.4.4",
    "updateType": "pin",
  },
  Object {
    "blockedByPin": true,
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "isSingleVersion": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "minor",
  },
  Object {
    "blockedByPin": true,
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() supports minor and major upgrades for tilde ranges 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.4.4",
    "updateType": "pin",
  },
  Object {
    "blockedByPin": true,
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "isSingleVersion": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "minor",
  },
  Object {
    "blockedByPin": true,
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades .x complex minor ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.2.x - 1.4.x",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades .x major ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.7",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.x",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades .x minor ranges 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 1,
    "newValue": "1.3.0",
    "updateType": "pin",
  },
  Object {
    "blockedByPin": true,
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades .x minor ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.x",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades less than equal major ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.4.1",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 2,
    "newMinor": 0,
    "newValue": "<= 2",
    "releaseTimestamp": "2015-01-31T08:11:47.852Z",
    "toVersion": "2.0.3",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades less than equal minor ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "<= 1.4",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades less than equal ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.2",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "<= 0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.2",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "<= 1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades less than major ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.7",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "< 2",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades less than ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.1",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "< 0.9.8",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.1",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "< 1.4.2",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades major greater than less than ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.7",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": ">= 0.5.0 < 2.0.0",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades major less than equal ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.0.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "<= 1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades major less than ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.7",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "< 2.0.0",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades minor greater than less than equals ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.8.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": ">= 0.5.0 <= 0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.8.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": ">= 0.5.0 <= 1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades minor greater than less than ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.2",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": ">= 0.5.0 <0.10",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.2",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": ">= 0.5.0 <1.5",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades minor ranged versions 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 1,
    "newValue": "1.0.1",
    "updateType": "pin",
  },
  Object {
    "blockedByPin": true,
    "canBeUnpublished": false,
    "fromVersion": "1.0.1",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades multiple caret ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.2",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "^0.9.0",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.2",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "^1.0.0",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades multiple tilde ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.2",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "~0.9.0",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "toVersion": "0.9.7",
    "updateType": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.2",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.4.0",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades shorthand major ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.7",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades shorthand minor ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades tilde ranges 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 1,
    "newValue": "1.3.0",
    "updateType": "pin",
  },
  Object {
    "blockedByPin": true,
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() upgrades tilde ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.4.0",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() uses the locked version for pinning 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 1,
    "newValue": "1.0.0",
    "updateType": "pin",
  },
  Object {
    "blockedByPin": true,
    "canBeUnpublished": false,
    "fromVersion": "1.0.0",
    "isSingleVersion": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() widens .x OR ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "2.7.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "1.x || 2.x || 3.x",
    "releaseTimestamp": "2017-10-17T15:22:36.646Z",
    "toVersion": "3.8.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() widens major ranged versions if configured 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "2.7.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "^2.0.0 || ^3.0.0",
    "releaseTimestamp": "2017-10-17T15:22:36.646Z",
    "toVersion": "3.8.1",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() widens minor ranged versions if configured 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.3.0 || ~1.4.0",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "toVersion": "1.4.1",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup .lookupUpdates() widens stanndalone major OR ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "2.7.0",
    "isRange": true,
    "isSingleVersion": false,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "1 || 2 || 3",
    "releaseTimestamp": "2017-10-17T15:22:36.646Z",
    "toVersion": "3.8.1",
    "updateType": "major",
  },
]
`;
